--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -1569,9 +1569,9 @@ dropdown can overlap all other components
   text-align: center;
 }
 .item-view-component .name-centering-container__form-name-input:focus {
-  box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -moz-box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -webkit-box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
+  box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -moz-box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -webkit-box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
 }
 .item-view-component .name-centering-container__completed-icon-centering-container {
   position: absolute;
@@ -1691,9 +1691,9 @@ dropdown can overlap all other components
   cursor: pointer;
 }
 .item-view-component .form-buttons-centered-container__submit-button:focus {
-  box-shadow: 0 0 0 1px #444444;
-  -moz-box-shadow: 0 0 0 1px #444444;
-  -webkit-box-shadow: 0 0 0 1px #444444;
+  box-shadow: 0 0 0 1px black;
+  -moz-box-shadow: 0 0 0 1px black;
+  -webkit-box-shadow: 0 0 0 1px black;
 }
 .item-view-component .form-buttons-centered-container__cancel-button {
   -webkit-touch-callout: none;
@@ -1721,7 +1721,7 @@ dropdown can overlap all other components
 }
 .item-view-component .form-buttons-centered-container__cancel-button:hover,
 .item-view-component .form-buttons-centered-container__cancel-button :active {
-  background-color: #e5e5e5;
+  background-color: #ebebeb;
 }
 .item-view-component .backend-errors {
   display: block;
@@ -2352,9 +2352,9 @@ dropdown can overlap all other components
   cursor: pointer;
 }
 .create-item-component .form__submit:focus {
-  box-shadow: 0 0 0 1px #444444;
-  -moz-box-shadow: 0 0 0 1px #444444;
-  -webkit-box-shadow: 0 0 0 1px #444444;
+  box-shadow: 0 0 0 1px black;
+  -moz-box-shadow: 0 0 0 1px black;
+  -webkit-box-shadow: 0 0 0 1px black;
 }
 
 .list-view-top-bar,
@@ -3084,9 +3084,9 @@ body {
 }
 .app-component .js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false:focus,
 .js-calc-app-component .js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-false:focus {
-  box-shadow: 0 0 0 1px #444444;
-  -moz-box-shadow: 0 0 0 1px #444444;
-  -webkit-box-shadow: 0 0 0 1px #444444;
+  box-shadow: 0 0 0 1px black;
+  -moz-box-shadow: 0 0 0 1px black;
+  -webkit-box-shadow: 0 0 0 1px black;
 }
 .app-component .js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-true:focus,
 .js-calc-app-component .js-set-create-item-sidebar-submit-button-focus-box-shadow-dark-mode-true:focus {
@@ -3216,9 +3216,9 @@ body {
 }
 .app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-false:focus,
 .js-calc-app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-false:focus {
-  box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -moz-box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -webkit-box-shadow: 0 -2px 0 0 #0062e2, -2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
+  box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -moz-box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -webkit-box-shadow: 0 -1px 0 0 #0062e2, -1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
 }
 .app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-true,
 .js-calc-app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-true {
@@ -3228,21 +3228,21 @@ body {
 }
 .app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-true:focus,
 .js-calc-app-component .js-set-item-view-edit-item-info-form-input-border-background-text-color-top-bottom-left-focus-box-shadow-dark-mode-true:focus {
-  box-shadow: 0 -2px 0 0 #2d7fc2, -2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
-  -moz-box-shadow: 0 -2px 0 0 #2d7fc2, -2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
-  -webkit-box-shadow: 0 -2px 0 0 #2d7fc2, -2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
+  box-shadow: 0 -1px 0 0 #2d7fc2, -1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
+  -moz-box-shadow: 0 -1px 0 0 #2d7fc2, -1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
+  -webkit-box-shadow: 0 -1px 0 0 #2d7fc2, -1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
 }
 .app-component .js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-false,
 .js-calc-app-component .js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-false {
-  box-shadow: 0 -2px 0 0 #0062e2, 2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -moz-box-shadow: 0 -2px 0 0 #0062e2, 2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
-  -webkit-box-shadow: 0 -2px 0 0 #0062e2, 2px 0 0 0 #0062e2, 0 2px 0 0 #0062e2;
+  box-shadow: 0 -1px 0 0 #0062e2, 1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -moz-box-shadow: 0 -1px 0 0 #0062e2, 1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
+  -webkit-box-shadow: 0 -1px 0 0 #0062e2, 1px 0 0 0 #0062e2, 0 1px 0 0 #0062e2;
 }
 .app-component .js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-true,
 .js-calc-app-component .js-set-item-view-edit-item-info-name-char-count-container-top-bottom-right-box-shadow-dark-mode-true {
-  box-shadow: 0 -2px 0 0 #2d7fc2, 2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
-  -moz-box-shadow: 0 -2px 0 0 #2d7fc2, 2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
-  -webkit-box-shadow: 0 -2px 0 0 #2d7fc2, 2px 0 0 0 #2d7fc2, 0 2px 0 0 #2d7fc2;
+  box-shadow: 0 -1px 0 0 #2d7fc2, 1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
+  -moz-box-shadow: 0 -1px 0 0 #2d7fc2, 1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
+  -webkit-box-shadow: 0 -1px 0 0 #2d7fc2, 1px 0 0 0 #2d7fc2, 0 1px 0 0 #2d7fc2;
 }
 .app-component .js-set-item-view-edit-item-info-diabled-label-dark-mode-false,
 .js-calc-app-component .js-set-item-view-edit-item-info-diabled-label-dark-mode-false {
@@ -3268,15 +3268,35 @@ body {
 }
 .app-component .js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-false:focus,
 .js-calc-app-component .js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-false:focus {
-  box-shadow: 0 0 0 1px #444444;
-  -moz-box-shadow: 0 0 0 1px #444444;
-  -webkit-box-shadow: 0 0 0 1px #444444;
+  box-shadow: 0 0 0 1px black;
+  -moz-box-shadow: 0 0 0 1px black;
+  -webkit-box-shadow: 0 0 0 1px black;
 }
 .app-component .js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-true:focus,
 .js-calc-app-component .js-set-item-view-edit-item-info-submit-button-focus-box-shadow-dark-mode-true:focus {
   box-shadow: 0 0 0 1px #d6d6d6;
   -moz-box-shadow: 0 0 0 1px #d6d6d6;
   -webkit-box-shadow: 0 0 0 1px #d6d6d6;
+}
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false {
+  background-color: #f5f5f5;
+}
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false:hover,
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false :active,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false:hover,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-false :active {
+  background-color: #ebebeb;
+}
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true {
+  background-color: #444444;
+}
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true:hover,
+.app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true :active,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true:hover,
+.js-calc-app-component .js-set-item-view-edit-item-info-cancel-button-button-background-color-mode-true :active {
+  background-color: #464646;
 }
 .app-component .js-set-dark-background-color-theme-teal,
 .js-calc-app-component .js-set-dark-background-color-theme-teal {
